--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "@fullcalendar/core": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-fullcalendar": "^2.0.3",
     "primeicons": "^2.0.0",
