--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.4",
