--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "tcc-client",
+  "engines": {
+    "node": "10.16.3",
+    "npm": "6.9.0"
+  },
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,6 +25,8 @@
     "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~9.0.4",
     "@angular/platform-browser-dynamic": "~9.0.4",
+    "@angular/cli": "~9.0.4",
+    "@angular/compiler-cli": "~9.0.4",
     "@angular/router": "~9.0.4",
     "@fullcalendar/core": "^4.4.0",
     "bootstrap": "^4.4.1",
@@ -34,7 +40,8 @@
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.2",
-    "jquery": "^3.4.1"
+    "jquery": "^3.4.1",
+    "typescript": "~3.7.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.4",
