--- a/package.json
+++ b/package.json
@@ -18,30 +18,32 @@
   "dependencies": {
     "@angular/animations": "^9.0.4",
     "@angular/cdk": "~9.1.0",
+    "@angular/cli": "~9.0.4",
     "@angular/common": "~9.0.4",
     "@angular/compiler": "~9.0.4",
+    "@angular/compiler-cli": "~9.0.4",
     "@angular/core": "~9.0.4",
     "@angular/forms": "~9.0.4",
     "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~9.0.4",
     "@angular/platform-browser-dynamic": "~9.0.4",
-    "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.4",
     "@angular/router": "~9.0.4",
     "@fullcalendar/core": "^4.4.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ng-fullcalendar": "^2.0.3",
+    "path": "^0.12.7",
     "primeicons": "^2.0.0",
     "primeng": "^9.0.0",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
-    "zone.js": "~0.10.2",
-    "jquery": "^3.4.1",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.900.4",
@@ -52,6 +54,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "~13.7.7",
     "codelyzer": "^5.0.0",
+    "enhanced-resolve": "^4.1.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
