--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "primeng": "^9.0.0",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^9.10.12",
     "tslib": "^1.11.1",
     "typescript": "~3.7.5",
     "zone.js": "~0.10.2"
