Atualização da versão das bibliotecas e conta de usuário.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # Only exists if Bazel was run
 /bazel-out
 
+# config
+.env
+
 # dependencies
 /node_modules
 
@@ -40,6 +43,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+.angular/
 
 # System Files
 .DS_Store
