--- a/package.json
+++ b/package.json
@@ -1,73 +1,62 @@
 {
   "name": "tcc-client",
   "engines": {
-    "node": "10.16.3",
-    "npm": "6.9.0"
+    "node": "16.17.1",
+    "npm": "8.17.0"
   },
-  "version": "0.0.0",
+  "version": "0.1.2",
   "scripts": {
     "ng": "ng",
-    "build": "ng build",
+    "build": "ng build --port 80 --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start": "node server.js",
-    "postinstall": "ng build --aot --prod"
+    "start": "ng serve"
   },
   "private": true,
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.17",
-    "@angular/animations": "^9.0.4",
-    "@angular/cdk": "~9.1.0",
-    "@angular/cli": "~9.0.4",
-    "@angular/common": "~9.0.4",
-    "@angular/compiler": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.4",
-    "@angular/core": "~9.0.4",
-    "@angular/forms": "~9.0.4",
-    "@angular/material": "^9.1.0",
-    "@angular/platform-browser": "~9.0.4",
-    "@angular/platform-browser-dynamic": "~9.0.4",
-    "@angular/router": "~9.0.4",
-    "@fullcalendar/core": "^4.4.0",
-    "bootstrap": "^4.4.1",
-    "chart.js": "^2.9.3",
-    "express": "^4.17.1",
+    "@abacritt/angularx-social-login": "^1.2.5",
+    "@amcharts/amcharts4": "^4.10.30",
+    "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.0",
+    "@angular/common": "^15.0.0",
+    "@angular/compiler": "^15.0.0",
+    "@angular/core": "^15.0.0",
+    "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.0",
+    "@angular/platform-browser": "^15.0.0",
+    "@angular/platform-browser-dynamic": "^15.0.0",
+    "@angular/router": "^15.0.0",
+    "@fullcalendar/core": "^5.11.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "chart.js": "^4.0.1",
+    "express": "^4.18.2",
     "font-awesome": "^4.7.0",
+    "fullcalendar": "^5.11.3",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.4.1",
-    "ng-fullcalendar": "^2.0.3",
-    "ng2-currency-mask": "^9.0.2",
+    "jquery": "^3.6.1",
+    "ng2-currency-mask": "^13.0.3",
     "path": "^0.12.7",
-    "primeicons": "^2.0.0",
-    "primeng": "^9.0.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^15.0.0-rc.1",
     "quill": "^1.3.7",
-    "rxjs": "~6.5.4",
-    "sweetalert2": "^9.10.12",
-    "tslib": "^1.11.1",
-    "typescript": "~3.7.5",
-    "zone.js": "~0.10.2"
+    "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.8",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.4",
-    "@angular/cli": "~9.0.4",
-    "@angular/compiler-cli": "~9.0.4",
-    "@angular/language-service": "~9.0.4",
-    "@types/jasmine": "~3.5.7",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~13.7.7",
-    "codelyzer": "^5.0.0",
-    "enhanced-resolve": "^4.1.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "@angular-devkit/build-angular": "^15.0.1",
+    "@angular/cli": "~15.0.1",
+    "@angular/compiler-cli": "^15.0.0",
+    "@types/jasmine": "~4.3.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.8.2"
   }
 }
