--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.1",
