--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@abacritt/angularx-social-login": "^1.2.5",
     "@amcharts/amcharts4": "^4.10.30",
     "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^15.0.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
-    "@angular/material": "^15.0.0",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
@@ -39,9 +39,9 @@
     "ng2-currency-mask": "^13.0.3",
     "path": "^0.12.7",
     "primeicons": "^6.0.1",
-    "primeng": "^15.0.0-rc.1",
+    "primeng": "^16.9.1",
     "quill": "^1.3.7",
-    "rxjs": "~7.5.0",
+    "rxjs": "^7.8.1",
     "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "0.13.3"
