--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
   "dependencies": {
     "@abacritt/angularx-social-login": "^1.2.5",
     "@amcharts/amcharts4": "^4.10.30",
-    "@angular/animations": "^17.3.12",
+    "@angular/animations": "^18.1.3",
     "@angular/cdk": "^17.3.10",
-    "@angular/common": "^17.3.12",
-    "@angular/compiler": "^17.3.12",
-    "@angular/core": "^17.3.12",
-    "@angular/forms": "^17.3.12",
+    "@angular/common": "^18.1.3",
+    "@angular/compiler": "^18.1.3",
+    "@angular/core": "^18.1.3",
+    "@angular/forms": "^18.1.3",
     "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "^17.3.12",
-    "@angular/platform-browser-dynamic": "^17.3.12",
-    "@angular/router": "^17.3.12",
+    "@angular/platform-browser": "^18.1.3",
+    "@angular/platform-browser-dynamic": "^18.1.3",
+    "@angular/router": "^18.1.3",
     "@fullcalendar/core": "^5.11.3",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
@@ -47,10 +47,11 @@
     "zone.js": "0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "~17.3.8",
-    "@angular/compiler-cli": "^17.3.12",
+    "@angular-devkit/build-angular": "^18.1.3",
+    "@angular/cli": "~18.1.3",
+    "@angular/compiler-cli": "^18.1.3",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.30",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
