--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build --port 80 --configuration production",
+    "build-robotnik": "ng build --port 80 --configuration production",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -15,7 +16,7 @@
   },
   "private": true,
   "dependencies": {
-    "@abacritt/angularx-social-login": "^1.2.5",
+    "@abacritt/angularx-social-login": "^2.3.0",
     "@amcharts/amcharts4": "^4.10.30",
     "@angular/animations": "^18.1.3",
     "@angular/cdk": "^18.1.3",
@@ -28,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^18.1.3",
     "@angular/router": "^18.1.3",
     "@fullcalendar/core": "^5.11.3",
+    "@types/node": "^22.13.4",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
     "chart.js": "^4.0.1",
@@ -52,6 +54,7 @@
     "@angular/compiler-cli": "^18.1.3",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.30",
+    "dotenv-webpack": "^8.1.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
